[package]
name = "hey-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"

[[bin]]
name = "hey"
path = "src/main.rs"
