[package]
name = "hey-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"

[[bin]]
name = "hey"
path = "src/main.rs"
